--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "scripts": {
     "dev": "next ./src",
     "build": "next build ./src",
-    "start": "next start ./src",
+    "start": "NODE_ENV=production next start ./src",
     "lint": "next lint",
     "tsc": "tsc -p ./src/tsconfig.json"
   },
   "dependencies": {
     "next": "12.0.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
