--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "12.0.4",
-    "next-redux-wrapper": "^7.0.5",
+    "next-redux-wrapper": "6.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
