--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "tsc": "tsc -p ./src/tsconfig.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/material": "^5.1.1",
+    "@mui/styled-engine-sc": "^5.1.0",
     "next": "12.0.4",
     "next-redux-wrapper": "6.0.2",
     "react": "17.0.2",
@@ -16,7 +21,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
