--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "deck.gl": "^8.6.4",
     "next": "12.0.4",
     "next-redux-wrapper": "6.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-map-gl": "^6.1.17",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
@@ -25,8 +27,10 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@danmarshall/deckgl-typings": "^4.9.10",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
