--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "csv-parse": "^5.0.3",
     "deck.gl": "^8.6.4",
+    "fs": "^0.0.1-security",
     "next": "12.0.4",
     "next-redux-wrapper": "6.0.2",
     "react": "17.0.2",
