--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tsc": "tsc -p ./src/tsconfig.json"
   },
   "dependencies": {
+    "@deck.gl/react": "^8.6.4",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
